# toggler

./: Cargo.toml  README.md
migrations/2019-03-18-210307_create_events/: up.sql
src/: main.rs  project.rs  toggle.rs
src/app/: mod.rs
src/database/: models.rs  schema.rs
src/domain/: mod.rs
src/project/: error.rs  mod.rs
