[package]
name = "feature-toggler"
version = "0.1.0"
authors = ["Alasdair Colley <alnessy@hotmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.6"
diesel = { version = "1.4.1", features = ["sqlite"] }
diesel_migrations = "1.4.0"
failure = "0.1.5"
failure_derive = "0.1.5"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
uuid = { version = "0.7.2", features = ["serde", "v4"] }
