[package]
name = "feature-toggler"
version = "0.1.0"
authors = ["Alasdair Colley <alnessy@hotmail.com>"]
edition = "2018"

[dependencies]
actix-web = "0.7.18"
chrono = "0.4.6"
diesel = { version = "1.4.1", features = ["r2d2", "sqlite"] }
diesel_migrations = "1.4.0"
env_logger = "0.6.1"
failure = "0.1.5"
failure_derive = "0.1.5"
r2d2 = "0.8.3"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
uuid = { version = "0.7.2", features = ["serde", "v4"] }
